fix(workspace): vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,8 @@
     },
     "markdownlint.run": "onSave",
     "markdown.occurrencesHighlight.enabled": true,
+    "markdownlint.config": {
+        "md033": false
+    },
     "markdown.extension.toc.orderedList": false
 }
