--- a/.github/workflows/test-deploy-mdorim.yml
+++ b/.github/workflows/test-deploy-mdorim.yml
@@ -18,10 +18,10 @@ jobs:
         - uses: actions/checkout@v3
         - uses: actions/setup-node@v3
         with:
-            node-version: '18.12.1'
+            node-version: 18
             cache: yarn
 
         - name: Install dependencies
-            run: yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile
         - name: Test build website
-            run: yarn build
+        run: yarn build
