--- a/.github/workflows/deploy-mdorim.yml
+++ b/.github/workflows/deploy-mdorim.yml
@@ -23,3 +23,4 @@ jobs:
               with:
                 source-folder: apps/mdorim
                 git-user: hgodinho
+                git-password: ${{ secrets.GITHUB_TOKEN }}
