--- a/package.json
+++ b/package.json
@@ -12,7 +12,17 @@
     ],
     "scripts": {
         "commit": "cz",
-        "graph": "yarn nx graph"
+        "graph": "yarn nx graph",
+        "docusaurus": "lerna run docusaurus",
+        "start": "lerna run start",
+        "build": "lerna run build",
+        "swizzle": "lerna run swizzle",
+        "deploy": "lerna run deploy",
+        "clear": "lerna run clear",
+        "serve": "lerna run serve",
+        "write-translations": "lerna run write-translations",
+        "write-heading-ids": "lerna run write-heading-ids",
+        "typecheck": "tsc"
     },
     "config": {
         "commitizen": {
