--- a/apps/mdorim/package.json
+++ b/apps/mdorim/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "mdorim-site",
-    "version": "0.0.0",
+    "name": "mdorim",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
         "docusaurus": "docusaurus",
