--- a/packages/mdorim/tsconfig.json
+++ b/packages/mdorim/tsconfig.json
@@ -1,12 +1,17 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "ES2020",
         "module": "commonjs",
         "strict": true,
         "esModuleInterop": true,
         "outDir": "./dist",
         "sourceMap": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "moduleResolution": "node",
+        "declaration": true,
+        "declarationMap": true,
+        "rootDir": "./src",
+        "skipLibCheck": true,
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "**/*.test.ts"]
