fix(workspace): mdorim-docs build gh-action correct build folder

--- a/.github/workflows/deploy-mdorim.yml
+++ b/.github/workflows/deploy-mdorim.yml
@@ -30,6 +30,6 @@ jobs:
             - name: Create gh-pages branch
               run: |
                   git checkout -b gh-pages
-                  git add dist
+                  git add build
                   git commit -m "Build and deploy"
                   git push --set-upstream origin gh-pages || exit 0
