--- a/.github/workflows/deploy-mdorim.yml
+++ b/.github/workflows/deploy-mdorim.yml
@@ -21,29 +21,8 @@ jobs:
         run: yarn install # replace with your package manager
       - name: Build Docusaurus site
         run: yarn build # replace with your build command
-      - name: Checkout gh-pages branch
-        uses: actions/checkout@v2
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          ref: gh-pages
-          path: gh-pages
-      - name: Remove existing files
-        run: |
-          cd gh-pages
-          git rm -rf .
-          git clean -fxd
-      - name: Copy files to gh-pages branch
-        run: |
-          cp -r build/* gh-pages/
-      - name: Commit changes
-        run: |
-          cd gh-pages
-          git config --global user.email "henrique@hgod.in"
-          git config --global user.name "hgodinho"
-          git add -A
-          git commit -m "Deploy Docusaurus site to GitHub Pages"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          force: true
+          personal_token: ${{ secrets.GH_PAGES_TOKEN }}
+          publish_dir: apps/mdorim-docs/build
