--- a/packages/tsconfig/tsconfig.json
+++ b/packages/tsconfig/tsconfig.json
@@ -3,9 +3,10 @@
         "target": "es6",
         "module": "esnext",
         "declaration": true,
-        "outDir": "dist",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true
-    }
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "**/*.test.ts"]
 }
