--- a/packages/tsconfig/tsconfig.json
+++ b/packages/tsconfig/tsconfig.json
@@ -2,11 +2,11 @@
     "compilerOptions": {
         "target": "es6",
         "module": "esnext",
+        "moduleResolution": "node",
         "declaration": true,
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true
     },
-    "include": ["src/**/*"],
     "exclude": ["node_modules", "**/*.test.ts"]
 }
