--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,6 +6,7 @@
     "types": "dist/index.d.ts",
     "license": "MIT",
     "scripts": {
+        "clear": "rm -rf dist/*",
         "build": "tsc",
         "watch": "tsc -w"
     },
