--- a/packages/mdorim/package.json
+++ b/packages/mdorim/package.json
@@ -1,29 +1,39 @@
 {
     "name": "@elucidario/mdorim",
     "version": "0.1.0",
-    "main": "dist/mdorim.js",
     "license": "MIT",
     "author": {
         "name": "Henrique Godinho",
         "email": "ola@hgod.in"
     },
+    "type": "module",
+    "main": "dist/mdorim.js",
     "scripts": {
-        "build": "yarn clean:dist && rollup -c && yarn clean:docs && tsx src/build-docs.ts",
-        "clean:docs": "rm -rf docs/*",
+        "build": "yarn clean:dist && rollup -c",
+        "build:docs": "yarn clean:docs && tsx src/build-docs.ts",
         "clean:dist": "rm -rf dist/*",
+        "clean:docs": "rm -rf docs/*",
         "dev": "tsx watch src/build-docs.ts",
-        "build:docs": "yarn clean:docs && yarn build && node dist/build-docs.js"
+        "test": "jest"
     },
     "devDependencies": {
-        "lodash": "^4.17.21",
+        "@elucidario/docusaurus-md": "^0.1.0",
+        "@elucidario/tsconfig": "^1.0.0",
+        "@elucidario/types": "^0.1.0",
         "@rollup/plugin-json": "^6.0.0",
+        "@rollup/plugin-run": "^3.0.1",
         "@rollup/plugin-terser": "^0.4.0",
         "@rollup/plugin-typescript": "^11.0.0",
         "@types/lodash": "^4.14.191",
         "@types/mustache": "^4.2.2",
         "@types/node": "^18.15.5",
         "babel-eslint": "^10.1.0",
+        "jest": "^29.5.0",
+        "lodash": "^4.17.21",
         "rollup": "^3.20.2",
+        "rollup-plugin-copy": "^3.4.0",
+        "ts-jest": "^29.0.5",
+        "ts-node": "^10.9.1",
         "tsx": "^3.12.6",
         "typescript": "^5.0.2"
     }
