--- a/packages/mdorim/tsconfig.json
+++ b/packages/mdorim/tsconfig.json
@@ -1,18 +1,16 @@
 {
+    "extends": "@elucidario/tsconfig",
     "compilerOptions": {
-        "target": "ES2020",
-        "module": "ESNext",
-        "strict": true,
-        "esModuleInterop": true,
-        "outDir": "./dist",
         "sourceMap": true,
-        "resolveJsonModule": true,
         "moduleResolution": "node",
-        "declaration": true,
+        "resolveJsonModule": true,
         "declarationMap": true,
-        "rootDir": "./src",
-        "skipLibCheck": true,
+        // "rootDir": "src",
+        "outDir": "dist",
     },
     "include": ["src/index.ts"],
-    "exclude": ["node_modules", "**/*.test.ts"]
+    "paths": {
+        "@elucidario/types": ["../types/src"],
+        "@elucidario/docusaurus-md": ["../docusaurus-md/dist"],
+    }
 }
