--- a/packages/md-to-gdoc/package.json
+++ b/packages/md-to-gdoc/package.json
@@ -10,7 +10,8 @@
         "authenticate": "tsx src/authenticate",
         "create": "tsx src/create-doc",
         "clean": "rm -rf dist/*",
-        "build": "yarn clean && tsc"
+        "build": "yarn clean && tsc",
+        "build:types": "tsx src/build-preset-types"
     },
     "dependencies": {
         "@googleapis/docs": "^2.0.1",
@@ -19,8 +20,12 @@
         "googleapis": "^114.0.0"
     },
     "devDependencies": {
+        "@elucidario/parse-args": "^0.1.0",
+        "@apidevtools/json-schema-ref-parser": "^10.1.0",
         "@elucidario/tsconfig": "^1.0.0",
+        "@types/json-schema": "^7.0.11",
         "@types/node": "^18.15.11",
+        "json-schema-to-typescript": "^12.0.0",
         "tsx": "^3.12.6",
         "typescript": "^5.0.3"
     }
