--- a/packages/rollup/package.json
+++ b/packages/rollup/package.json
@@ -9,6 +9,7 @@
         "@rollup/plugin-json": "^6.0.0",
         "@rollup/plugin-terser": "^0.4.0",
         "@rollup/plugin-typescript": "^11.1.0",
+        "lodash.merge": "^4.6.2",
         "rollup": "^3.20.2"
     }
 }
