--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -13,30 +13,22 @@
     "license": "MIT",
     "author": "hgodinho <henrique@hgod.in>",
     "type": "module",
-    "main": "./dist/pub-gen.js",
-    "bin": "./dist/pub-gen.js",
+    "main": "index.js",
+    "bin": {
+        "pub-gen": "./index.js"
+    },
     "scripts": {
-        "build": "yarn clean && rollup -c",
-        "clean": "rm -rf dist/*",
-        "dev": "yarn build && tsc -w ",
-        "test": "node ./__tests__/pub-gen.test.js"
+        "test": "node ./__tests__/pub-gen.test.js",
+        "pub-gen": "node ./index.js"
     },
     "dependencies": {
+        "@elucidario/md-to-gdoc": "workspace:^",
+        "@elucidario/parse-args": "workspace:^",
         "commander": "^10.0.0",
-        "inquirer": "^9.1.5"
+        "inquirer": "^9.1.5",
+        "json-schema": "^0.4.0"
     },
     "devDependencies": {
-        "@elucidario/md-to-gdoc": "^0.1.0",
-        "@elucidario/parse-args": "^0.1.0",
-        "@elucidario/rollup": "^1.0.0",
-        "@elucidario/tsconfig": "^1.0.0",
-        "@rollup/plugin-terser": "^0.4.0",
-        "@rollup/plugin-typescript": "^11.1.0",
-        "@types/inquirer": "^9.0.3",
-        "@types/node": "^18.15.11",
-        "lodash": "^4.17.21",
-        "rollup": "^3.20.2",
-        "tsx": "^3.12.6",
-        "typescript": "^5.0.3"
+        "lodash": "^4.17.21"
     }
 }
