--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,17 +6,18 @@
     "author": "Henrique Godinho <henrique@hgod.in>",
     "license": "MIT",
     "dependencies": {
-        "eslint": "^8.35.0",
-        "eslint-config-next": "^13.2.3",
+        "eslint": "^8.38.0",
+        "eslint-config-next": "^13.3.0",
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.1.1"
     },
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.54.0",
-        "@typescript-eslint/parser": "^5.54.0",
+        "@typescript-eslint/eslint-plugin": "^5.57.1",
+        "@typescript-eslint/parser": "^5.57.1",
         "eslint": "^8.35.0",
-        "typescript": "^4.9.5"
+        "eslint-plugin-n": "^15.7.0",
+        "typescript": "^5.0.4"
     }
 }
