--- a/packages/mdorim/tsconfig.json
+++ b/packages/mdorim/tsconfig.json
@@ -5,7 +5,7 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "declarationMap": true,
-        // "rootDir": "src",
+        "rootDir": "src",
         "outDir": "dist",
     },
     "include": ["src/index.ts"],
