--- a/packages/parse-args/package.json
+++ b/packages/parse-args/package.json
@@ -6,14 +6,14 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "build": "yarn clean && rollup -c",
+        "build": "pnpm clean && rollup -c",
         "clean": "rm -rf dist/*"
     },
     "devDependencies": {
-        "@elucidario/rollup": "^1.0.0",
-        "@elucidario/tsconfig": "^1.0.0",
+        "@elucidario/rollup": "workspace:^",
+        "@elucidario/tsconfig": "workspace:^",
         "@types/node": "^18.15.11",
         "rollup": "^3.20.2",
-        "typescript": "^5.0.3"
+        "typescript": "^5.0.4"
     }
 }
