--- a/packages/rollup/package.json
+++ b/packages/rollup/package.json
@@ -5,11 +5,12 @@
     "license": "MIT",
     "type": "module",
     "devDependencies": {
-        "@elucidario/tsconfig": "^1.0.0",
+        "@elucidario/tsconfig": "workspace:^",
         "@rollup/plugin-json": "^6.0.0",
         "@rollup/plugin-terser": "^0.4.0",
         "@rollup/plugin-typescript": "^11.1.0",
         "lodash.merge": "^4.6.2",
-        "rollup": "^3.20.2"
+        "rollup": "^3.20.2",
+        "typescript": "^5.0.4"
     }
 }
