--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -11,8 +11,8 @@
         "watch": "tsc -w"
     },
     "devDependencies": {
-        "@types/node": "^18.15.10",
-        "typescript": "^5.0.2",
-        "@elucidario/tsconfig": "^1.0.0"
+        "@elucidario/tsconfig": "workspace:^",
+        "@types/node": "^18.15.11",
+        "typescript": "^5.0.4"
     }
 }
