--- a/packages/md-to-gdoc/tsconfig.json
+++ b/packages/md-to-gdoc/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "resolveJsonModule": true,
         "outDir": "dist",
+        "types": ["chalk", "node"]
     },
-    "include": ["src/index.ts"],
+    "include": ["src/index.ts"]
 }
