--- a/packages/docusaurus-md/tsconfig.json
+++ b/packages/docusaurus-md/tsconfig.json
@@ -3,10 +3,10 @@
     "compilerOptions": {
         "baseUrl": ".",
         "rootDir": "src",
-        "outDir": "dist",
+        "outDir": "dist"
     },
     "include": ["src/index.ts"],
     "paths": {
-        "@elucidario/types": ["../types/src"],
+        "@elucidario/types": ["../types/src"]
     }
 }
