--- a/packages/schema-doc/tsconfig.json
+++ b/packages/schema-doc/tsconfig.json
@@ -5,6 +5,7 @@
         "outDir": "dist",
         "target": "ES2020",
         "module": "ES2020",
+        "allowJs": true,
         "paths": {
             "@elucidario/types": ["../types/dist"],
             "@elucidario/docusaurus-md": ["../docusaurus-md/dist"]
