--- a/apps/mdorim-docs/package.json
+++ b/apps/mdorim-docs/package.json
@@ -20,6 +20,7 @@
         "@docusaurus/module-type-aliases": "^2.4.0",
         "@docusaurus/plugin-content-docs": "^2.4.0",
         "@docusaurus/preset-classic": "^2.4.0",
+        "@docusaurus/theme-classic": "^2.4.0",
         "@mdx-js/react": "^1.6.22",
         "clsx": "^1.2.1",
         "prism-react-renderer": "^1.3.5",
