--- a/.github/workflows/deploy-mdorim.yml
+++ b/.github/workflows/deploy-mdorim.yml
@@ -18,6 +18,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 6.14.1
       - name: Install Docusaurus dependencies
         run: pnpm install # replace with your package manager
       - name: Build Docusaurus site
