--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -19,7 +19,7 @@
     },
     "scripts": {
         "clean:docs": "rm -rf ./docs/*",
-        "build:docs": "pnpm clean:docs && node bin/build.js",
+        "build": "pnpm clean:docs && node bin/build.js",
         "pub-gen": "node ./index.js",
         "test": "node ./__tests__/pub-gen.test.js"
     },
@@ -27,6 +27,7 @@
         "@elucidario/md-to-gdoc": "workspace:^",
         "@elucidario/parse-args": "workspace:^",
         "@elucidario/schema-doc": "workspace:^",
+        "@elucidario/docusaurus-md": "workspace:^",
         "ajv": "^8.12.0",
         "chalk": "^5.2.0",
         "commander": "^10.0.0",
