--- a/packages/schema-doc/tsconfig.json
+++ b/packages/schema-doc/tsconfig.json
@@ -1,11 +1,9 @@
 {
     "extends": "@elucidario/tsconfig",
     "compilerOptions": {
-        // "rootDir": "src",
         "outDir": "dist",
-        "target": "ES2020",
-        "module": "ES2020",
-        "allowJs": true,
+        "target": "ESNext",
+        "module": "ESNext",
         "paths": {
             "@elucidario/types": ["../types/dist"],
             "@elucidario/docusaurus-md": ["../docusaurus-md/dist"]
